--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ good_lp = { version = "1.9.0", default-features = false, features = ["highs"], o
 [dev-dependencies]
 
 [features]
+default = ["graphs"]
 graphs = []
 lpmodels = ["highs", "highs-sys", "good_lp"]
