--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "domino-lib"
 description = "Domino library, create sequences and puzzles, solve and validate them in rust"
+repository = "https://github.com/DominoOrg/domino-lib"
 license = "MIT"
-version = "0.1.1"
+version = "0.2.1"
 edition = "2021"
 authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]
 
