--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,6 @@
-[package]
-name = "domino-lib"
-description = "Domino library, create sequences and puzzles, solve and validate them in rust"
-repository = "https://github.com/DominoOrg/domino-lib"
-license = "MIT"
-version = "1.3.3"
-edition = "2021"
-authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]
-
-[lib]
-path = "src/lib.rs"
-
-[dependencies]
-rand = "0.8.5"
-anyhow = "1.0.92"
-good_lp = { version = "1.9.0", default-features = false, features = ["highs"]}
-itertools = "0.13.0"
-serde_json = "1.0.39"
-serde = "1.0.188"
+[workspace]
+resolver = "2"
+members = [
+    "domino-lib",
+    "domino-cli",
+]
