--- a/domino-lib/Cargo.toml
+++ b/domino-lib/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "domino-lib"
+version = "1.3.3"
 description = "Domino library, create sequences and puzzles, solve and validate them in rust"
 repository = "https://github.com/DominoOrg/domino-lib"
 license = "MIT"
@@ -17,3 +18,4 @@ good_lp = { version = "1.9.0", default-features = false, features = ["highs"]}
 itertools = "0.13.0"
 serde_json = "1.0.39"
 serde = "1.0.188"
+clap = "4.5.35"
