--- a/domino-cli/Cargo.toml
+++ b/domino-cli/Cargo.toml
@@ -8,6 +8,6 @@ repository = "https://github.com/DominoOrg/domino-lib"
 
 
 [dependencies]
-domino-lib = "1.3.3"
+domino-lib = { path = "../domino-lib" }
 clap = { version = "4.4", features = ["derive"] }
 serde_json = "1.0.140"
